# TecMediaFile

./: .gitignore  CMakeLists.txt  prepare_environment.sh  run_all.sh  run_services.sh  test_api.py
controller/: CMakeLists.txt
controller/config/: controller_config.xml
controller/include/: Controller.h  ControllerConfig.h  FileController.h
controller/src/: Controller.cpp  ControllerConfig.cpp  FileController.cpp  main.cpp  test_xml.cpp
disk/: CMakeLists.txt
disk/config/: disk_config.xml
disk/include/: DiskConfig.h  DiskNode.h
disk/src/: DiskConfig.cpp  DiskNode.cpp  main.cpp
frontend/: app.js  index.html  style.css
shared/: CMakeLists.txt
shared/include/: Base64.h  JsonProtocol.h  Raid5.h
shared/src/: Base64.cpp  JsonProtocol.cpp  Raid5.cpp  Raid5Helpers.cpp  tinyxml2.cpp
tests/: CMakeLists.txt
